[permissionmanager] added support for localized permission descriptions; moved add/delete buttons to the right; items in the user and locations table can now be selected by clicking anywhere in the table row;

--- a/modules-available/permissionmanager/style.css
+++ b/modules-available/permissionmanager/style.css
@@ -41,6 +41,10 @@
     margin-bottom: 20px;
 }
 
+.selectize-input {
+    overflow: visible;
+}
+
 
 .tree-container .selected {
     background-color: rgba(0, 182, 41, 0.23);
