--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -73,13 +73,17 @@
 					<tr class="input-group">
 						<td class="input-group-addon">{{lang_maxImageValidity}}</td>
 						<td>
-							<input name="maxImageValidityDays" class="form-control" type="number" value="{{maxImageValidityDays}}" min="7" max="999" pattern="^\d+$">
+							<input name="maxImageValidityDays"
+							class="form-control" type="number"
+							value="{{maxImageValidityDays}}" min="7" max="9999" pattern="^\d+$">
 						</td>
 					</tr>
 					<tr class="input-group">
 						<td class="input-group-addon">{{lang_maxLectureVisibility}}</td>
 						<td>
-							<input name="maxLectureValidityDays" class="form-control" type="number" value="{{maxLectureValidityDays}}" min="1" max="999" pattern="^\d+$">
+							<input name="maxLectureValidityDays"
+							class="form-control" type="number"
+							value="{{maxLectureValidityDays}}" min="1" max="9999" pattern="^\d+$">
 						</td>
 					</tr>
 					<tr class="input-group">
