[permissionmanager] removed alert from roleeditor

--- a/modules-available/permissionmanager/templates/roleeditor.html
+++ b/modules-available/permissionmanager/templates/roleeditor.html
@@ -64,7 +64,7 @@
 		$('form').submit(function () {
 			var name = $.trim($('#rolename').val());
 			if (name  === '') {
-				alert('{{lang_emptyNameWarning}}');
+				$("#rolename").addClass("missingInput");
 				return false;
 			}
 		});
