--- a/modules-available/baseconfig/templates/_page.html
+++ b/modules-available/baseconfig/templates/_page.html
@@ -127,7 +127,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	});
 
 	/* data-shadowing bindings */
-	$allShadowingFields = $('[data-shadows]');
+	var $allShadowingFields = $('[data-shadows]');
 	$allShadowingFields.on('change', function (event) { updateShadows(event.target); });
 	$allShadowingFields.each(function (idx, elem) { updateShadows(elem); });
 });
