--- a/modules-available/dozmod/templates/orglist.html
+++ b/modules-available/dozmod/templates/orglist.html
@@ -33,6 +33,7 @@
 
 function seto(action, el, orgid) {
 	var box = $(el);
+	var $notification;
 	box = box.parent();
 	var v = el.checked ? '1' : '0';
 	var old = el.checked == true;
