--- a/modules-available/dozmod/templates/userlist.html
+++ b/modules-available/dozmod/templates/userlist.html
@@ -56,6 +56,7 @@
 
 function setu(action, el, uid) {
 	var box = $(el);
+	var $notification;
 	box = box.parent();
 	var v = el.checked ? '1' : '0';
 	var old = el.checked == true;
