--- a/modules-available/locationinfo/templates/frontend-default.html
+++ b/modules-available/locationinfo/templates/frontend-default.html
@@ -369,6 +369,7 @@ optional:
 </div>
 </body>
 
+<!--suppress RedundantIfStatementJS -->
 <script type="text/javascript">
 	var rooms = {};
 	var lastRoomUpdate = 0;
