--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -105,6 +105,7 @@ var slxFilterNames = {
 slxLocations = {{{locations}}};
 
 var slxFilterDel = '{{delimiter}}';
+var $modal, $queryForm;
 
 
 document.addEventListener("DOMContentLoaded", function () {
@@ -217,7 +218,7 @@ function popupFilter(field) {
 function addFilterFromForm() {
 	var argument1 = $('#argumentInput').val();
 	var argument2 = $('#argumentSelect').val();
-	var argument = argument1 == '' ? argument2 : argument1;
+	var argument = argument1 ? argument1 : argument2;
 	var col = $('#columnSelect').val();
 	var op = $('#operatorSelect').val();
 
@@ -246,8 +247,8 @@ function toggleSort(field) {
 
 /* equal sign should always be first, the rest doesn't matter*/
 function myOpSort(a,b) {
-	if (a == '=') { return -1; }
-	else if (a == b) {return 0}
+	if (a === '=') { return -1; }
+	else if (a === b) {return 0}
 	else { return 1;}
 
 }
