[syconfig] AD: Better error messages, don't lose DN if homeAttrCheck fails

--- a/modules-available/sysconfig/templates/ad-selfsearch.html
+++ b/modules-available/sysconfig/templates/ad-selfsearch.html
@@ -54,7 +54,7 @@
 		<input name="server" value="{{server}}" type="hidden">
 		<input name="port" value="{{port}}" type="hidden">
 		<input id="searchbase" name="searchbase" value="{{searchbase}}" type="hidden">
-		<input id="fulldn" name="binddn" value="" type="hidden">
+		<input id="fulldn" name="binddn" value="{{binddn}}" type="hidden">
 		<input id="givendn" name="originalbinddn" value="{{originalbinddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input id="home" name="home" value="{{home}}" type="hidden">
