[locationinfo] Update translations

--- a/modules-available/locationinfo/templates/page-locations.html
+++ b/modules-available/locationinfo/templates/page-locations.html
@@ -7,7 +7,7 @@
 	<tr>
 		<th>{{lang_locationName}}</th>
 		<th>{{lang_backend}}</th>
-		<th>{{lang_lastUpdate}}</th>
+		<th>{{lang_lastCalendarUpdate}}</th>
 		<th>{{lang_openingtimes}}</th>
 	</tr>
 	</thead>
