[statistics] Properly mark disconnected sceens as such if the output name changed

--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -144,11 +144,11 @@
 					<tr>
 						<td class="text-nowrap">{{lang_screens}}</td>
 						<td>
-							<form method="post" action="?do=statistics" id="delprojector">
+							<form method="post" action="?do=statistics&amp;show=projectors" id="delprojector">
 								<input type="hidden" name="token" value="{{token}}">
 								<input type="hidden" name="action" value="delprojector">
 							</form>
-							<form method="post" action="?do=statistics" id="addprojector">
+							<form method="post" action="?do=statistics&amp;show=projectors" id="addprojector">
 								<input type="hidden" name="token" value="{{token}}">
 								<input type="hidden" name="action" value="addprojector">
 							</form>
