--- a/modules-available/statistics/templates/projector-list.html
+++ b/modules-available/statistics/templates/projector-list.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
 	<div class="panel-heading">{{lang_projectors}}</div>
 	<div class="panel-body">
-		<form method="post" action="?do=statistics" id="delprojector">
+		<form method="post" action="?do=statistics&amp;show=projectors" id="delprojector">
 			<input type="hidden" name="token" value="{{token}}">
 			<input type="hidden" name="action" value="delprojector">
 			<p>{{lang_thoseAreProjectors}}</p>
